[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "redgewise"
version = "0.1.0"
description = "Residue Energy edge-wise analysis from GROMACS simulations."
requires-python = ">=3.10"
dependencies = [
    "MDAnalysis>=2.0",
    "numpy>=1.26",
    "pyarrow>=15",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "rustworkx>=0.17",
    ]

[project.scripts]
redgewise = "redgewise.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"redgewise.manuals" = ["*.md"]